<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_software_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_software_codename"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_codename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_software_incremental"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_incremental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:textColor="@color/white"
            android:text="@string/version_software_release"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_software_sdk"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_sdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_software_baseband"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_baseband"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_software_display"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_software_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_board"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_hardware_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_model"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_hardware_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_device"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_hardware_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_manufacture"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/version_hardware_manufacture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_sn"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />
        <TextView
            android:id="@+id/sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/version_hardware_mac"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />
        <TextView
            android:id="@+id/mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearance" />
    </LinearLayout>

</ScrollView>
